src/objects/RelaySwitch__c.object
<CustomObject>
    <fields>
        <fullName>LastTurnedOn__c</fullName>
        <label>Last Turned On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Relay__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Relay</label>
        <referenceTo>Relay__c</referenceTo>
        <relationshipLabel>RelaySwitches</relationshipLabel>
        <relationshipName>RelaySwitches</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>POWER OFF</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>POWER ON</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SwitchNumber__c</fullName>
        <label>SwitchNumber</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SW1</fullName>
                </value>
                <value>
                    <fullName>SW2</fullName>
                </value>
                <value>
                    <fullName>SW3</fullName>
                </value>
                <value>
                    <fullName>SW4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Wattage__c</fullName>
        <label>Wattage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>RelaySwitch</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>RelaySwitch Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RelaySwitches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>